Mantis ChangeLog

2004.08.xx  -  0.19.0xx

- 0004137: [feature] Support a simple "view" URL (vboctor)
- 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
- 0004185: [customization] Support custom menu options (vboctor)
- 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
- 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
- 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
- 0004093: [filters] Custom field values are a larger type size in view_all_bug_page (narcissus)
- 0004108: [filters] "Use Date Filters" in advanced filters (narcissus)
- 0004121: [filters] Filters saved while "All Projects" is the active project (narcissus)
- 0004125: [filters] In the advanced page, "any" should be selected by default for all search criteria (narcissus)
- 0004150: [filters] Custom field names are not localised in filters (vboctor)
- 0004183: [filters] HTML entities in search text (narcissus)
- 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
- 0004083: [sponsorships] Users without email address must not be able to sponsor issues (thraxisp)
- 0002861: [bugtracker] misleading 'copyright' at the pages' bottom (vboctor)
- 0003710: [bugtracker] time stats in summary to use resolved (thraxisp)
- 0004031: [bugtracker] Hiding/removing fixed_in_versions (thraxisp)
- 0004154: [bugtracker] "Product version" and "Fixed in Version" do not get updated on rename (vboctor)
- 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
- 0004175: [bugtracker] Links are not hyperlinked properly if containing '[' or ']' (vboctor)
- 0004182: [bugtracker] print_all_bug_page should show all issues matching current filter (vboctor)
- 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)